File (Field) Paths 7.x-1.x-dev, xxxx-xx-xx (development release)
--------------------------------------------------------------------------------

- #2276435 by Decipherd, david_garcia, rajmataj: Fixed issue with retroactive
    updates and instance settings.
- #2271595 by Deciphered, tstoeckler, Reg: Fixed issue with empty batch.
- #2214409: Updated field form layout.
- #2211665: Added File path validation to remove unnecessary slashes.
- #2103151 by Deciphered, david_garcia, Sumeet.Pareek, kitikonti, kolier:
    Fixed deprecated /e modifier in preg_replace().
- #2185755 by treksler: Fixed issue with regex, backreferences and numbers.
- #2068365 by Deciphered, vinmassaro: Fixed issue when no instance in update.
- #2047835: Fixed issue with pathauto replacemenets and periods (.).
- #1985650: Fixed issue with moved Drush file in .info.
- #1985280 by Deciphered, drasgardian: Fixed issue with hook_entity_update()
    foreach loop.
- #1495716/#1986472: Fixed issue with D6 -> D7 upgrade path.
- #1292436 by maximpodorov, InternetDevels: Fixed issue pathinfo and UTF files.
- Added tests.



File (Field) Paths 7.x-1.0-beta4, 2013-04-25
--------------------------------------------------------------------------------

- #1945148: Fixed issue with File path cleanup process.
- #1942720 by pp: Fixed issue with cleanup wehn token contains a '/' character.
- #1925298 by David_Rothstein: Fixed issue with Image derivatives.
- #1866450: Fixed issue with foreign characters in Regex.
- #1714596: Fixed issue with file_attach_update() introduced in Drupal 7.15.
- #1705298: Fixed extra beggining slash.
- #1601104 by tseven: Fixed notice when no extension present.
- #1572206: Add ability to disable for certain fields.
- #1549474: Fixed path replacement in summary text.
- #1512466 by maximpodorov, perarnet: Fixed issue with multi-value updates.
- #1499442 by hass: Improved translatable strings.
- #1464404: Fixed issue with field_attach_update().